# Fisica

./: CMakeLists.txt  README.md  graphic.cpp  graphic.hpp  lotkavolterraGPT.cpp  main.cpp  simulation.cpp  simulation.hpp  simulation.test.cpp
logs/: 2025-06-18_11-31-04.txt  2025-06-18_11-33-42.txt  2025-06-18_11-34-14.txt  2025-06-18_11-34-29.txt  2025-06-18_11-34-52.txt  2025-06-18_11-36-08.txt  2025-06-18_11-36-42.txt  2025-06-18_13-00-53.txt  2025-06-18_13-01-54.txt  2025-06-18_13-06-02.txt  2025-06-18_13-18-45.txt  2025-06-18_13-22-46.txt
